# cli

./: README.md  meson.build
include/cli/: cli.h
src/: cli.c
